# langflow-retail-agent-example

./: .gitignore  Out Of Stock Example.csv  Out Of Stock Example.md  Out Of Stock Example.xlsx  README.md  database.py  endpoint.py  frontend.py  main.py  pyproject.toml  retail_inventory.db
static/: inventory.json
